--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -3,10 +3,10 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-main:
+# main:
 #  - name: Demo
-#    url: '#about'
-#    weight: 10
+#   url: '#about'
+#  weight: 10
 #  - name: Posts
 #    url: '#posts'
 #    weight: 20
