--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,12 +20,12 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: Ryan.Steppe@bcm.edu
-contact_links:
-  - icon: twitter
-    icon_pack: fab
-    name: DM Me
-    link: 'https://twitter.com/rjsteppe'
+# email: 
+# contact_links:
+#   - icon: twitter
+#     icon_pack: fab
+#     name: 
+#     link: 
 
 # Site header
 
